--- a/GenCore/GenCore/GenCore/GenCore.csproj
+++ b/GenCore/GenCore/GenCore/GenCore.csproj
@@ -14,4 +14,9 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GenCore.DataAccesLayer\GenCore.DataAccesLayer.csproj" />
+    <ProjectReference Include="..\GenCore.Services\GenCore.Services.csproj" />
+  </ItemGroup>
+
 </Project>
